2002-02-19  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/stroke-style.c: New file

	* src/dialogs/stroke-style.h: New file

	* src/helper/units.c (sp_distance_get_units): New method
	(sp_distance_get_points): Ditto

	* src/helper/units.h: Moved SPDistance here

	* src/style.h: Moved SPDistance to units.h

	* src/display/nr-arena-shape.c (nr_arena_shape_render): Render gradient
	strokes as well

	* src/dialogs/object-properties.c: Start rewriting to use dynamic
	fill/stroke widgets instead of original glade dialog

	* src/dialogs/stroke-style.h: New file

	* src/dialogs/stroke-style.c: New file

	* src/gradient-chemistry.c (sp_style_change_property): Reimplement,
	hopefully the correct way now

	* src/widgets/gradient-position.c (sp_gradient_position_update): Pre
	build local renderer here 

	* src/helper/nr-gradient.c (nr_lgradient_renderer_setup_r8g8b8a8): Do
	not allocate renderer, allow using static ones too
	(nr_lgradient_renderer_setup_r8g8b8): Ditto

	* src/widgets/paint-selector.c (sp_paint_selector_set_style_buttons): Do not
	activate pattern and fractal fill buttons

2002-02-18  Lauris Kaplinski  <lauris@ximian.com>

	* src/widgets/paint-selector.c: Lot of rearrangements everywhere -
	I am too tired to write all these down. Basically we have one frontend
	megawidget SPPaintSelector, that interfaces to colors, gradient and more.

2002-02-10  Lauris Kaplinski  <lauris@ximian.com>

	* src/desktop.c (sp_desktop_widget_destroy): Removed stale signal
	disconnect (no idea what it was originally for)

2002-02-09  Lauris Kaplinski  <lauris@ximian.com>

	* configure.in: Removed rbuf, frgba, new font checks and arena switch

	* src/sp-namedview.c (sp_namedview_setup_grid_item): Grid settings are
	always in points, units are there just for user preference
	(sp_namedview_read_attr): Ditto

	* src/desktop-snap.c (sp_desktop_horizontal_snap): Read snap distances
	from new desktop members
	(sp_desktop_vertical_snap): Ditto
	(sp_desktop_vector_snap): Ditto